--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nikita's Mini-Games</title>
+    <title>{{ title }}</title>
     <style>
       body {
         text-align: center;
@@ -16,10 +16,9 @@
     </style>
   </head>
   <body>
-    <div class="container">
-      <h1>Mini-Games</h1>
-      <div class="random-game"></div>
-    </div>
-    <script src="mini-game.js"></script>
+    <header>
+      <a href="/">Page1</a> | <a href="/about">Page2</a>
+    </header>
+    {{ content | safe }}
   </body>
 </html>
