--- a/src/redirects.njk
+++ b/src/redirects.njk
@@ -2,7 +2,7 @@
 permalink: _redirects
 ---
 
-/    /gb/index.html    200   Language=gb
+/    /ru/index.html    200   Language=ru
 
 {%- for item in news %}
 / /{{item.country}}/index.html  200  Country={{item.country}}
