--- a/src/localized.njk
+++ b/src/localized.njk
@@ -9,7 +9,7 @@ permalink: /{{ news.country }}/index.html
 ---
 
 <div class="container">
-  <h1>News in Belgium:</h1>
+  <h1>News in your region:</h1>
   {# <div class="random-game"></div> #}
 
 
