finish the project

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -13,6 +13,9 @@
         width: 400px;
         margin: 0 auto;
       }
+      .hidden{
+        display: none;
+      }
     </style>
   </head>
   <body>
