--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -10,17 +10,44 @@
         text-align: center;
       }
       div.container {
-        width: 400px;
-        margin: 0 auto;
+        text-align: center;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        border: 5px solid #b2960b;
+        margin: 8em 0em;
+        padding: 10px;
       }
       .hidden{
         display: none;
       }
+      .grid {
+        width: 606px;
+        height: 606px;
+        display: flex;
+        flex-wrap: wrap;
+      }
+      .square {
+        height: 200px;
+        width: 200px;
+        border: solid black 1px;
+      } 
+      .mole {
+        background-image: url("../images/gold.png");
+        background-size: cover;
+      }
+      #grid {
+        width: 400px;
+        height: 300px;
+        display: flex;
+        flex-wrap: wrap;
+      }
     </style>
   </head>
   <body>
-    <header>
-      <a href="/">Page1</a> | <a href="/about">Page2</a>
+    <header class="header">
+      <a href="/">Hit Your Discount</a> | <a href="/memory-game">Memory Game</a> | <a href="/rock-paper-scissors">Rock Paper Scissors</a>
     </header>
     {{ content | safe }}
   </body>
