--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -9,6 +9,10 @@
       body {
         text-align: center;
       }
+      header {
+        padding: 1em;
+        margin: 4em;
+      }
       div.container {
         text-align: center;
         position: absolute;
@@ -18,9 +22,6 @@
         border: 5px solid #b2960b;
         margin: 8em 0em;
         padding: 10px;
-      }
-      .hidden{
-        display: none;
       }
       .grid {
         width: 606px;
