--- a/src/rock-paper-scissors.njk
+++ b/src/rock-paper-scissors.njk
@@ -1,15 +1,24 @@
 ---
-title: Memory Game
+title: Hit the Discount
 layout: base.njk
 ---
 
 <div class="container">
-  <h2>Computer Choice: <span id="computer-choice"></span></h2>
-  <h2>Your Choice: <span id="user-choice"></span></h2>
-  <h2>Result: <span id="result"></span></h2>
-
-  <button id="rock">Rock</button>
-  <button id="paper">Paper</button>
-  <button id="scissors">Scissors</button>
-  <script src="/js/rock-paper-scissors.js"></script>
+  <h1>PRESS FAST TO GET A DISCOUNT:</h1>
+  <h2>Your Current Discount:</h2>
+  <h2 id="score">0%</h2>
+  <h2>Your Time:</h2>
+  <h2 id="time-left">15</h2>
+  <div class="grid">
+    <div class="square" id="1"></div>
+    <div class="square" id="2"></div>
+    <div class="square" id="3"></div>
+    <div class="square" id="4"></div>
+    <div class="square" id="5"></div>
+    <div class="square" id="6"></div>
+    <div class="square" id="7"></div>
+    <div class="square" id="8"></div>
+    <div class="square" id="9"></div>
+  </div>
 </div>
+<script src="/js/app.js"></script>
